<resources>
    <string name="app_name">Hola</string>
    <string name="text_main_screen">encrypted\nephemeral\nmessaging\nsystem</string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="remember_me">remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="dont_have_acc">Don\'t have an account? </string>
    <string name="register"><u>Sign up</u></string>
    <string name="field_required">This field is required</string>
    <string name="error_wrong_login_data">Wrong username and/or password</string>
    <string name="email_req">Email*</string>
    <string name="phone_req">Phone*</string>
    <string name="nickname_req">Nickname*</string>
    <string name="password_req">Password*</string>
    <string name="repeat_password_req">Confirm password*</string>
    <string name="registration">Registration</string>
    <string name="finish_registration_btn">Finish registration</string>
    <string name="error_all_fields_required">All fields are required</string>
    <string name="data_confirmation">Data confirmation</string>
    <string name="data_confirmation_hint">A confirmation code has been sent to your phone and email to confirm your phone number</string>
    <string name="code_from_sms_or_email">Code from SMS or email</string>
    <string name="code_from_sms">Code from SMS</string>
    <string name="confirm_phone_number">Confirm phone number</string>
    <string name="password_restore">Restore password</string>
    <string name="password_restore_hint">To reset your password, enter your phone number or email, which were specified during registration</string>
    <string name="phone_or_email">Phone or email</string>
    <string name="restore_password">Restore password</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_hint">A confirmation code has been sent to your phone and email to reset your password.</string>
    <string name="reset_the_password">Reset password</string>
    <string name="setting_new_password">Setting a new password</string>
    <string name="setting_new_password_hint">Specify a new password to access the application.</string>
    <string name="save">Save</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm password</string>

    <string name="menu_new_chat">New Chat</string>
    <string name="menu_new_secret_chat">New Secret Chat</string>
    <string name="menu_saved_messages">Saved messages</string>
    <string name="menu_local_storage">Local storage</string>
    <string name="menu_cloud_storage">Cloud storage</string>
    <string name="menu_invite_friends">Invite Friends</string>
    <string name="menu_calls">Calls</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="empty_list">List is empty</string>
    <string name="empty_messages">Write the first message </string>
    <string name="my_chats_title">Hola Chats</string>
    <string name="new_chat_title">New Chat</string>
    <string name="settings_title">Settings</string>
    <string name="edit_personal_info">Edit personal info</string>
    <string name="change_avatar">Change avatar</string>

    <string name="registration_send_code_description">We will send an SMS with a confirmation code to your phone number</string>
    <string name="registration_send_code_btn">Send code</string>
    <string name="finish_registration">Finish the registration</string>
    <string name="register_code_sent_to_phone">Code successfully sent to your phone</string>
    <string name="please_complete_all_fields_below">Please complete all fields below</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_req">Confirm password*</string>
    <string name="email">Email</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="phone_number_confirmed">Phone number confirmed.</string>
    <string name="could_not_verify_phone">Could not verify your phone.</string>
    <string name="forgot_pincode">Forgot PIN code?</string>
    <string name="title_pin_check">Enter PIN code for Hola</string>
    <string name="pincode_cancel_change"><u>Cancel code change</u></string>
    <string name="pincode_enter_current">Enter current PIN code</string>
    <string name="pincode_enter_new">Enter new PIN code</string>
    <string name="pincode_enter_repeat">Repeat new PIN code</string>
    <string name="pincode_cancel_add">Cancel</string>
    <string name="menu_logout">Log Out</string>
    <string name="search_hint">Search...</string>
    <string name="please_input_your_phone_number">Please, input your phone number</string>
    <string name="download_manager_title_format">Hola Attachment: %1$s</string>
    <string name="new_secret_chat_title">New Secret Chat</string>
    <string name="create_chat">Create chat</string>
    <string name="create_secret_chat">Create secret chat</string>
    <string name="bugreport_description">Tell us about a problem and get xBit bounty credits</string>
    <string name="bugreport_text_hint">Type your message here...</string>
    <string name="bugreport_title">Write us about bug in Hola</string>
    <string name="learn_more_about_xbit">Learn more about xBit</string>
    <string name="title_fragment_bugreport">Report a bug</string>
    <string name="dlg_title_change_password">Change password</string>
    <string name="change_password">Change password</string>
    <string name="OK">Ok</string>
    <string name="allow_permission_for_contacts_in_settings">Allow permission to contacts in settings</string>
</resources>
