<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/holder_data"
        android:layout_centerHorizontal="true"
        >
        <LinearLayout
            android:layout_width="@dimen/et_size"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:padding="8dp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_send_code_description"
                android:padding="8dp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:textAlignment="center"
                />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/holder_data"
        android:layout_width="@dimen/et_size"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/bg_white_rounded"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColorHint="@color/etColor"
            android:textColor="@color/black"
            android:imeOptions="actionDone"
            />
        <Button
            android:id="@+id/bt_send_code"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_dark_rounded"
            android:text="@string/registration_send_code_btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </LinearLayout>
</RelativeLayout>